--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "@babel/polyfill": "^7.7.0",
+    "axios": "^0.19.0",
+    "core-js": "^2.5.7",
     "vue": "^2.6.10",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
